--- a/master.cfg
+++ b/master.cfg
@@ -11,17 +11,23 @@
 # Contenedores docker para los esclavos
 
 from buildbot.status.html import WebStatus
-from buildbot.plugins.changes import GitPoller
-from buildbot.plugins.buildslave import BuildSlave
-from buildbot.plugins.util import (Authz, BasicAuth, BuilderConfig,
-                                   FixedParameter, ChangeFilter)
-from buildbot.plugins.schedulers import (Periodic, SingleBranchScheduler,
-                                         ForceScheduler)
+from buildbot.plugins import changes, buildslave, util, schedulers
 
 from buildhelpers.packages import packages
 from buildhelpers.factories import maintenance, packaging
 from buildhelpers.config import (available_archs, available_distros,
                                  common_passwd)
+
+GitPoller = changes.GitPoller
+BuildSlave = buildslave.BuildSlave
+Authz = util.Authz
+BasicAuth = util.BasicAuth
+BuilderConfig = util.BuilderConfig
+FixedParameter = util.FixedParameter
+ChangeFilter = util.ChangeFilter
+Periodic = schedulers.Periodic
+SingleBranchScheduler = schedulers.SingleBranchScheduler
+ForceScheduler = schedulers.ForceScheduler
 
 slavesdata = {}
 slaves = []
