Correcting random stuff.

--- a/master.cfg
+++ b/master.cfg
@@ -9,6 +9,9 @@
 # Eperar si se está actualizando el chroot
 # Meter en reprepro los resultados [DONE]
 # Contenedores docker para los esclavos
+# Implementar bazaar, mercurial y dsc como fuentes de paquetes
+# Mejorar la creación de paquete fuente
+# Mejorar la inteligencia de inclusión en el repo
 
 from buildbot.status.html import WebStatus
 from buildbot.plugins import changes, buildslave, util, schedulers
@@ -16,7 +19,8 @@ from buildbot.plugins import changes, buildslave, util, schedulers
 from buildhelpers.packages import packages
 from buildhelpers.factories import maintenance, packaging
 from buildhelpers.config import (available_archs, available_distros,
-                                 common_passwd)
+                                 common_passwd, periodic_build_timer,
+                                 git_poller_interval)
 
 GitPoller = changes.GitPoller
 BuildSlave = buildslave.BuildSlave
@@ -55,7 +59,8 @@ for arch in available_archs:
 # Git pollers
 
 for pkg in packages.keys():
-    change_source.append(GitPoller(project=pkg, pollinterval=60,
+    change_source.append(GitPoller(project=pkg,
+                                   pollinterval=git_poller_interval,
                                    repourl=packages[pkg]['repository'],
                                    branch=packages[pkg]['branch']))
 
@@ -70,7 +75,7 @@ for slave in slavesdata.keys():
 
     schedulers.append(Periodic(name='periodic_'+buildername,
                                builderNames=[buildername],
-                               periodicBuildTimer=24*60*60))
+                               periodicBuildTimer=periodic_build_timer))
 
     schedulers.append(ForceScheduler(name='forced_'+buildername,
                                      builderNames=[buildername]))
