Completing automatic version assignment.

--- a/master.cfg
+++ b/master.cfg
@@ -13,6 +13,10 @@
 # Mejorar la creación de paquete fuente
 # Mejorar la inteligencia de inclusión en el repo
 
+
+# Borrar paquetes del git-checkout
+# Corregit git_revision
+
 from buildbot.status.html import WebStatus
 from buildbot.plugins import changes, buildslave, util, schedulers
 
