--- a/master.cfg
+++ b/master.cfg
@@ -5,17 +5,16 @@
 # Instalar prebuild-deps dentro del cowbuilder [DONE]
 # Ejecutar prebuild-script dentro del cowbuilder [DONE]
 # Compilar y configurar dentro del cowbuilder [DONE]
-# Esperar a que otro apt-get termine
-# Eperar si se está actualizando el chroot
 # Meter en reprepro los resultados [DONE]
+# Esperar a que otro apt-get termine [DONE]
+# Eperar si se está actualizando el chroot
 # Contenedores docker para los esclavos
 # Implementar bazaar, mercurial y dsc como fuentes de paquetes
 # Mejorar la creación de paquete fuente
 # Mejorar la inteligencia de inclusión en el repo
-
-
-# Borrar paquetes del git-checkout
-# Corregit git_revision
+# Borrar paquetes del git-checkout [DONE]
+# Corregit git_revision [DONE]
+# Configurar todo por pbuilderrc
 
 from buildbot.status.html import WebStatus
 from buildbot.plugins import changes, buildslave, util, schedulers
